# tresor

./: README.md  pyproject.toml  streamlit_app.py
src/: __init__.py
src/components/: enigme_displayer.py  enigme_selector.py  login.py  logo.py  place_hint.py
src/data/: dict_enigmes.py  ordre_enigmes.py  qr_code_generator.py
src/pages/: page_admin.py  page_home.py  page_puzzle.py  page_treasure.py
src/utils/: puzzles.py
