[project]
name = "tresor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "segno>=1.6.6",
    "streamlit>=1.52.2",
    "streamlit-qrcode-scanner>=0.1.2",
]
